--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
@@ -89,11 +87,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
@@ -112,11 +108,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
@@ -135,11 +129,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
@@ -158,11 +150,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
@@ -181,11 +171,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
@@ -204,11 +192,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
@@ -227,11 +213,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
@@ -250,11 +234,9 @@
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
-                    <div class="blog-desc">Leverage When an equity or F&O trader takes a position greater in value than
-                        the
-                        funds or margins
-                        available in their account, such positions are said to be leveraged. This is typically done
-                        wit...
+                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
+                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
+                        laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
                     <!-- <div class="buyFlex">
                         <div class="buyDiv">
