updates link and images

--- a/index.html
+++ b/index.html
@@ -64,6 +64,101 @@
         <div class="row blog-row">
             <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
                 <div class="card-width">
+                    <img class="img-fluid blogImg" src="./images/groww.png">
+                    <div class="blog-title">Groww App
+                    </div>
+                    <div class="blog-desc">
+                        Discover a smarter way to invest, trade, and manage your money with the Groww app. Whether
+                        you're a seasoned investor or just starting your financial journey, Groww empowers you to take
+                        control of your finances and achieve your financial goals. With a user-friendly interface and a
+                        wide range of features, Groww is your one-stop destination for all things related to personal
+                        finance. <br>
+                        <a target="_blank" href="https://app.groww.in/v3cO/xz8nsgpo"
+                            class="btn btn-primary text-white mt-2">Read
+                            More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
+                <div class="card-width">
+                    <img class="img-fluid blogImg" src="./images/angle.png">
+                    <div class="blog-title">Angle One Link
+                    </div>
+                    <div class="blog-desc">
+                        Introducing Angle One, your ultimate solution for advanced home security. With cutting-edge
+                        technology and intuitive design, Angle One redefines how you protect and monitor your home,
+                        ensuring peace of mind whether you're home or away. Experience a new era of home security that
+                        puts you in control. <br>
+                        <a target="_blank" href="https://angel-one.onelink.me/Wjgr/iyzjz05k"
+                            class="btn btn-primary text-white mt-2">Read
+                            More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
+                <div class="card-width">
+                    <img class="img-fluid blogImg" src="./images/5paisa.jpg">
+                    <div class="blog-title">5 Paisa
+                    </div>
+                    <div class="blog-desc">
+                        Embark on a journey of intelligent investing with 5paisa, your comprehensive platform for
+                        seamless stock trading, mutual fund investments, and more. Experience the power of cutting-edge
+                        technology combined with user-friendly features, empowering you to take control of your
+                        financial future like never before. <br>
+                        <a target="_blank" href="https://5paisa.page.link/CQxJizUYEWTXcdd46"
+                            class="btn btn-primary text-white mt-2">Read
+                            More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
+                <div class="card-width">
+                    <img class="img-fluid blogImg" src="./images/blog.png">
+                    <div class="blog-title">Up Stock
+                    </div>
+                    <div class="blog-desc">Discover a new level of investment possibilities with UP Stock, your gateway
+                        to the world of stocks, trading, and financial growth. Empower yourself to make informed
+                        investment decisions, seize opportunities, and stay ahead in the dynamic world of the stock
+                        market. <br>
+                        <a target="_blank" href="https://link.upstox.com/pfHD  "
+                            class="btn btn-primary text-white mt-2">Read
+                            More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
+                <div class="card-width">
+                    <img class="img-fluid blogImg" src="./images/cash.png">
+                    <div class="blog-title">Cash Karo !!
+                    </div>
+                    <div class="blog-desc">Introducing CashKaro, your ultimate destination for maximizing savings while
+                        you shop online. Say goodbye to full-priced purchases and hello to exclusive deals, discounts,
+                        and cashback offers across a wide range of brands. Experience a smarter way to shop and earn as
+                        you spend. <br>
+                        <a target="_blank" href="https://cashkaro.com?r=9894774&fname=Pranay+Prakash+Galande"
+                            class="btn btn-primary text-white mt-2">Read
+                            More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
+                <div class="card-width">
+                    <img class="img-fluid blogImg" src="./images/work.png">
+                    <div class="blog-title">Work India
+                    </div>
+                    <div class="blog-desc">Welcome to WorkIndia, your ultimate destination for finding the perfect job
+                        opportunities tailored to your skills and preferences. Say goodbye to traditional job hunting
+                        and experience a revolutionary way to discover, apply, and secure your dream job. Get hired
+                        faster and easier with WorkIndia by your side.<br>
+                        <a target="_blank"
+                            href="https://workindia.sng.link/Bhrm9/heei?_ddl=workindia%3A%2F%2Fopen%3Freferral%3DcanSCWKgo"
+                            class="btn btn-primary text-white mt-2">Read
+                            More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
+                <div class="card-width">
                     <img class="img-fluid blogImg" src="./images/blog.png">
                     <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
                     </div>
@@ -71,16 +166,6 @@
                         deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
                         laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
                 </div>
             </div>
             <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
@@ -92,16 +177,6 @@
                         deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
                         laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
                 </div>
             </div>
             <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
@@ -113,144 +188,8 @@
                         deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
                         laudantium deserunt facilis voluptate illo voluptas mollitia!
                     </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
                 </div>
-            </div>
-            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
-                <div class="card-width">
-                    <img class="img-fluid blogImg" src="./images/blog.png">
-                    <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
-                    </div>
-                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
-                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
-                        laudantium deserunt facilis voluptate illo voluptas mollitia!
-                    </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
-                <div class="card-width">
-                    <img class="img-fluid blogImg" src="./images/blog.png">
-                    <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
-                    </div>
-                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
-                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
-                        laudantium deserunt facilis voluptate illo voluptas mollitia!
-                    </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
-                <div class="card-width">
-                    <img class="img-fluid blogImg" src="./images/blog.png">
-                    <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
-                    </div>
-                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
-                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
-                        laudantium deserunt facilis voluptate illo voluptas mollitia!
-                    </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
-                <div class="card-width">
-                    <img class="img-fluid blogImg" src="./images/blog.png">
-                    <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
-                    </div>
-                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
-                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
-                        laudantium deserunt facilis voluptate illo voluptas mollitia!
-                    </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
-                <div class="card-width">
-                    <img class="img-fluid blogImg" src="./images/blog.png">
-                    <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
-                    </div>
-                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
-                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
-                        laudantium deserunt facilis voluptate illo voluptas mollitia!
-                    </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-            <div class="blog-main-card col-xl-4 col-lg-6 col-md-6">
-                <div class="card-width">
-                    <img class="img-fluid blogImg" src="./images/blog.png">
-                    <div class="blog-title">4 Strategies to Consider When Investing in a Bear Market
-                    </div>
-                    <div class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas
-                        deserunt dolor. Praesentium sint, odio aliquid consequatur expedita a soluta hic ad nostrum
-                        laudantium deserunt facilis voluptate illo voluptas mollitia!
-                    </div>
-                    <!-- <div class="buyFlex">
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-calendar"></i></span>
-                            <span>12/02/2022</span>
-                        </div>
-                        <div class="buyDiv">
-                            <span><i class="fa-regular fa-user"></i></span>
-                            <span>By Umang</span>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
+            </div> -->
         </div>
     </div>
     </div>
